test/files/neg/t909.check
t909.scala:6: error: type mismatch;
 found   : String("Hello")
 required: Int
                        case Foo("Hello") =>
                                 ^
one error found
